Feature: Allows students to update their time commitments
